@@ -25,3 +25,4 @@
 ( cvs diff -u -r 1.6.2.17 -r 1.6.2.18 src/maildir_gtk.c;  cvs diff -u -r 1.6.2.16 -r 1.6.2.17 src/plugin.c;  ) > 0.24.4cvs7.patchset
 ( cvs diff -u -r 1.6.2.18 -r 1.6.2.19 src/maildir_gtk.c;  ) > 0.24.4cvs8.patchset
 ( cvs diff -u -r 1.6.2.19 -r 1.6.2.20 src/maildir_gtk.c;  cvs diff -u -r 1.6.2.17 -r 1.6.2.18 src/plugin.c;  ) > 0.24.4cvs9.patchset
+( cvs diff -u -r 1.22.2.13 -r 1.22.2.14 src/maildir.c;  cvs diff -u -r 1.6.2.20 -r 1.6.2.21 src/maildir_gtk.c;  ) > 0.24.4cvs10.patchset
